; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/mach-bf537/boards/extr_stamp.c_native_machine_restart.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/mach-bf537/boards/extr_stamp.c_native_machine_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@P_DEFAULT_BOOT_SPI_CS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @native_machine_restart(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (...) @bfin_read_SYSCR()
  %4 = and i32 %3, 7
  %5 = icmp eq i32 %4, 3
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* @P_DEFAULT_BOOT_SPI_CS, align 4
  %8 = call i32 @bfin_reset_boot_spi_cs(i32 %7)
  br label %9

9:                                                ; preds = %6, %1
  ret void
}

declare dso_local i32 @bfin_read_SYSCR(...) #1

declare dso_local i32 @bfin_reset_boot_spi_cs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
